--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Setup
-title:        Project or Site name
-tagline:      A responsive theme for your project on GitHub Pages
+title:        HeeJung Hwang blog
+tagline:      beyond the Reality
 baseurl:      "/blog"
 paginate:     1
 
 # About/contact
 author:
-  name:       Author name
-  url:        http://yourhomepage.com 
+  name:       HeeJung Hwang
+  url:        https://heejunghwang.github.io/blog/
 
 # Gems
 gems:
